# the-segmentation-game

./: LICENSE  README.md  ROC_test.xlsx  deploy.bat  metrics.py  requirements.txt  setup.cfg  tox.ini
src/the_segmentation_game/: __init__.py  _dock_widget.py  metrics.py
src/the_segmentation_game/_tests/: test_dock_widget.py  test_metrics.py
