[metadata]
name = the-segmentation-game
version = 0.1.0
author = Robert Haase, Martin Schätz
author_email = robert.haase@tu-dresden.de
url = https://github.com/haesleinhuepf/the-segmentation-game
license = BSD-3-Clause
description = Gamified image segmentation quality estimation
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Information Analysis
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/the-segmentation-game/issues
    Documentation = https://github.com/haesleinhuepf/the-segmentation-game#README.md
    Source Code = https://github.com/haesleinhuepf/the-segmentation-game
    User Support = https://github.com/haesleinhuepf/the-segmentation-game/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    napari_tools_menu
    napari-skimage-regionprops
    scikit-learn

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    the-segmentation-game = the_segmentation_game
